<resources>
    <string name="app_name">Fresco</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Quis hoc potest videre, quis potest pati,\nnisi impudicus et vorax et aleo,\nMamurram habere quod Comata Gallia\nhabebat uncti et ultima Britannia?\ncinaede Romule haec videbis et feres?\net ille nunc superbus et superfluens\nperambulabit omnium cubilia,\nut albulus columbus aut Adoneus?\ncinaede Romule, haec videbis et feres?\nes impudicus et vorax et aleo.\neone nomine, imperator unice,\nfuisti in ultima occidentis insula,\nut ista vestra diffututa mentula\nducenties comesset aut trecenties?\nquid est alid sinistra liberalitas?\nparum expatrauit an parum elluatus est?\npaterna prima lancinata sunt bona,\nsecunda praeda Pontica, inde tertia\nHibera, quam scit amnis aurifer Tagus:\nnunc Galliae timetur et Britanniae.\nquid hunc malum fouetis? aut quid hic potest\nnisi uncta devorare patrimonia?\neone nomine urbis opulentissime\nsocer generque, perdidistis omnia?\n</string>
    <string name="lorem_ipsum_short">Quis hoc potest videre, quis potest pati,\nnisi impudicus et vorax et aleo,\nMamurram habere quod Comata Gallia\nhabebat uncti et ultima Britannia?\ncinaede Romule haec videbis et feres?</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">@android:string/ok</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="error">Error</string>
    <string name="expired">Expired</string>
    <string name="retry">Retry</string>
    <string name="log_in">Log In</string>
    <string name="password_text">Password</string>
    <string name="add_a_password">Add a password</string>
    <string name="read_more">Read More</string>
    <string name="submit">Submit</string>
    <string name="refresh">Refresh</string>
    <string name="fresco_wordmark_desc">Fresco Wordmark</string>
    <string name="location_not_found">Location could not be found</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="upload_error">Upload error</string>
    <string name="uploading">Uploading</string>
    <string name="show">Show</string>
    <string name="select">Select</string>
    <string name="users">Users</string>
    <string name="all_users">All Users</string>
    <string name="log_out">Log Out</string>
    <string name="camera">Camera</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="new_text">New</string>
    <string name="delete">Delete</string>
    <string name="dollar_amount">$%1$.2f</string>
    <string name="home">Home</string>
    <string name="highlights">Highlights</string>
    <string name="following">Following</string>
    <string name="stories">Stories</string>
    <string name="all_stories">All Stories</string>
    <string name="assignments">Assignments</string>
    <string name="global_assignments">Global Assignments</string>
    <string name="directions">Directions</string>
    <string name="assignments_warning">Not all events are safe. Be careful!</string>
    <string name="photo_price">$20</string>
    <string name="video_price">$50</string>
    <string name="open_camera">Open Camera</string>
    <string name="assignment_accept">Accept</string>
    <string name="expires_one_param">Expires in %1$s.</string>
    <string name="expires_two_param">Expires in %1$s and %2$s.</string>
    <string name="posted_at">Posted %1$s ago at %2$s</string>
    <string name="posted_at_yesterday">Posted yesterday at %1$s</string>
    <string name="posted_at_today">Posted today at %1$s</string>
    <string name="gallery_title">Gallery</string>
    <string name="articles">Articles</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add a comment</string>
    <string name="num_comments">%1$d Comments</string>
    <string name="num_previous_comments">%1$d previous comments</string>
    <string name="show_more">Show More</string>
    <string name="show_all">Show All</string>
    <string name="comment_hint">Say something nice</string>
    <string name="submitted">Submitted</string>
    <string name="submitted_anonymously">Submitted anonymously</string>
    <string name="verified">Verified</string>
    <string name="pending_verification">Pending verification</string>
    <string name="sold">Sold!</string>
    <string name="deleted">Deleted</string>
    <string name="not_verified">Not verified</string>
    <string name="couldnt_verify">Couldn\'t verify</string>
    <string name="sold_to">Sold to %1$s</string>
    <string name="sold_to_outlets">Sold to %1$d outlets</string>
    <string name="verified_message">News outlets can purchase content from this gallery.</string>
    <string name="pending_message">Once we’ve verified your gallery, news outlets will be able to purchase content.</string>
    <string name="deleted_message">This gallery is only visible to news outlets that purchased it.</string>
    <string name="couldnt_verify_message">This gallery is visible to Fresco users but hidden from outlets.</string>
    <string name="get_help">Get Help</string>
    <string name="likes_count">Likes (%1$d)</string>
    <string name="reposts_count">Reposts (%1$d)</string>
    <string name="posted_by">Posted %1$s %2$s at %3$s by:</string>
    <string name="posted_by_yesterday">Posted yesterday at %1$s by:</string>
    <string name="posted_by_today">Posted today at %1$s by:</string>
    <string name="posted_by_years">Posted %1$s %2$s, %3$s at %4$s by:</string>
    <string name="updated_at">Updated %1$s %2$s at %3$s</string>
    <string name="updated_at_yesterday">Updated yesterday at %1$s</string>
    <string name="updated_at_today">Updated today at %1$s</string>
    <string name="updated_at_years">Updated %1$s %2$s, %3$s at %4$s</string>
    <string name="assignment_notifications">Assignment notifications</string>
    <string name="assignments_area">We\'ll notify you about assignments in your area</string>
    <string name="have_promo_code">Have a promo code?</string>
    <string name="signing_up_service">I agree to the</string>
    <string name="signing_up_tos">terms of service</string>
    <string name="create_account">CREATE MY ACCOUNT</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with">Or, sign in with: </string>
    <string name="login_usesrname_label">Email or @username</string>
    <string name="log_in_button">Log In</string>
    <string name="close_onboarding_desc">Close Onboarding</string>
    <string name="login_incorrect">Login Incorrect</string>
    <string name="search_title">Search</string>
    <string name="suggested_users">Suggested users</string>
    <string name="active_citizens_area">Active citizen journalists in your area:</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="reset_onboarding">Reset onboarding</string>
    <string name="restart_activity">Restart Activity</string>
    <string name="save_radius">Save Radius</string>
    <string name="save_card">Save Card</string>
    <string name="save_account">Save Account</string>
    <string name="save_username">Save Username</string>
    <string name="save_email">Save Email</string>
    <string name="save_password">Save Password</string>
    <string name="save_tax_info">Save ID Info</string>
    <string name="old_password_text">Old Password</string>
    <string name="new_password_text">New Password</string>
    <string name="debit_card">Debit Card</string>
    <string name="bank_account">Bank Account</string>
    <string name="scan_your_card">Scan your card</string>
    <string name="me">Me</string>
    <string name="change_password">Change Password</string>
    <string name="assignment_payments">Assignments &amp; payment</string>
    <string name="assignments_notifications">Assignment notifications</string>
    <string name="notification_radius">Notification radius</string>
    <string name="payment_method">Payment method</string>
    <string name="id_info">Id info</string>
    <string name="tax_info">Tax info</string>
    <string name="social">Social</string>
    <string name="find_friends">Find friends</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google+</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="promo_codes">Promo codes</string>
    <string name="about_fresco">About Fresco</string>
    <string name="ask_us_anything">Ask us anything</string>
    <string name="faq">FAQ</string>
    <string name="logout">Log out</string>
    <string name="disable_my_account">Disable my account</string>
    <string name="logout_confirm">Logout?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="account_recover">You can recover your account\nfor one year by logging in.</string>
    <string name="state_id">STATE ID</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_dob">Enter date of birth</string>
    <string name="enter_tax_id">Enter tax Id</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_zip">Enter zip</string>
    <string name="enter_city">Enter city</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Date of birth</string>
    <string name="address">Address</string>
    <string name="address_unit">Unit # (optional)</string>
    <string name="zip">Zip</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="tax_id_ssn">SSN</string>
    <string name="edit">Edit</string>
    <string name="username">\@username</string>
    <string name="email_address">Email address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="bio">Bio</string>
    <string name="bio_loading">Bio Loading&#8230;</string>
    <string name="followers">Followers</string>
    <string name="followers_count">Followers (%1$d)</string>
    <string name="following_count">Following (%1$d)</string>
    <string name="activity">Activity</string>
    <string name="my_profile">My Profile</string>
    <string name="tos">Terms of service</string>
    <string name="updated_tos">Updated terms of service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="i_agree">I Agree</string>
    <string name="videos_must_be_one_minute">Videos must be one minute or less in length</string>
    <string name="missing_content">
        Location data is required when submitting to an assignment.
        To make sure content is tagged with location data, <b>enable Location in Settings</b>
    </string>
    <string name="missing_content_important_1">IMPORTANT:</string>
    <string name="missing_content_important_2">The Android camera does not save location data with videos.</string>
    <string name="missing_content_important_3">Always shoot your videos with Fresco!</string>
    <string name="dev_options">Dev Options</string>
    <string name="report_gallery">Report this gallery</string>
    <string name="report_gallery_message">What\'s wrong with this gallery?</string>
    <string name="its_abusive">It\'s abusive</string>
    <string name="its_spam">It\'s spam</string>
    <string name="includes_stolen_content">Includes stolen content</string>
    <string name="includes_graphic_content">Includes graphic content</string>
    <string name="please_share_more_details">Please share more details</string>
    <string name="send_report">Send Report</string>
</resources>