<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_stories"
        android:shortcutDisabledMessage="@string/stories"
        android:shortcutId="stories"
        android:shortcutLongLabel="@string/stories"
        android:shortcutShortLabel="@string/stories">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.fresconews.fresco.v2.storiespreview.StoriesPreviewActivity"
            android:targetPackage="com.fresconews.fresco"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_assignments"
        android:shortcutDisabledMessage="@string/assignments"
        android:shortcutId="assignments"
        android:shortcutLongLabel="@string/assignments"
        android:shortcutShortLabel="@string/assignments">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.fresconews.fresco.v2.assignments.AssignmentMapActivity"
            android:targetPackage="com.fresconews.fresco"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_camera"
        android:shortcutDisabledMessage="@string/camera"
        android:shortcutId="camera"
        android:shortcutLongLabel="@string/camera"
        android:shortcutShortLabel="@string/camera">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.fresconews.fresco.v2.camera.CameraWrapperActivity"
            android:targetPackage="com.fresconews.fresco"/>
    </shortcut>
</shortcuts>
