<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="model"
            type="com.fresconews.fresco.v2.settings.dialogs.LogOutDialogViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/settings_dialog_section_padding_top">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/settings_dialog_padding_left_right"
            android:layout_marginRight="@dimen/settings_dialog_padding_left_right"
            android:text="@string/logout_confirm"
            android:textColor="@color/black_54"
            android:textSize="16sp"
            app:customFont="@{@string/robotoRegular}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_footer_height"
            android:layout_below="@+id/title_text_view"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/settings_dialog_footer_padding_top_bottom"
            android:paddingTop="@dimen/settings_dialog_footer_padding_top_bottom">

            <Button
                style="@style/DialogButton.Negative"
                android:text="@string/cancel"
                app:customFont="@{@string/notaBold}"
                app:onClick="@{model.cancel}"
                tools:background="@color/fresco_red"/>

            <Button
                style="@style/DialogButton.Positive"
                android:text="@string/log_out"
                android:textColor="@color/fresco_red"
                app:customFont="@{@string/notaBold}"
                app:onClick="@{model.logOut}"
                tools:background="@color/fresco_green"/>

        </LinearLayout>

    </RelativeLayout>

</layout>
